--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,15 @@
-.App {
-  text-align: center;
+.mtt{
+ margin-top: 26rem;
+ /* margin-left: 9rem; */
+ border-radius: 18px;
+}
+.mll{
+  margin-top: 28rem;
+  /* margin-left: 9rem; */
+  border-radius: 18px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.brr{
+  border-radius: 18px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-.heart {
-  color: #ff0000;
-}
-
-.small {
-  font-size: 0.75rem;
-}
